<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">Property9</string>
<string name="action_settings">Settings</string>
<string name="hello_world">Hello world!</string>
<string name="drawer_open">Slider Menu Opened</string>
<string name="drawer_close">Slider Menu Closed</string>

<!-- Nav Drawer Menu Items -->
<string-array name="nav_drawer_items">
    <item >Home</item>
    <item>About Us</item>
    <item>Brose By Location</item>
    <item>Select By Builders</item>
    <item>Register</item>
    <item>Contact Us</item>
</string-array>

<!-- Nav Drawer List Item Icons -->
<!-- Keep them in order as the titles are in -->
<array name="nav_drawer_icons">
    <item>@drawable/ic_action_home</item>
    <item>@drawable/ic_action_account_balance</item>
    <item>@drawable/ic_action_room</item>
    <item>@drawable/ic_action_accessibility</item>
    <item>@drawable/ic_action_account_child</item>
    <item>@drawable/ic_communication_call</item>

</array>
    <string name="about_us">We are a property consultancy firm,
        we are guided by our spirit of enterprise. What does that mean to you?
        It means as professionals,
        we embrace even the toughest challenges and are relentlessly creative in solving them.
        At Property 9, we push each other to be better than we thought we could be.
        We go the extra step for our clients and partners,
        creating memorable experience that enhance and grow relationships and we have a lot of fun along the way.</string>
    <string name="why">Why you should choose us</string>

<!-- Content Description -->
<string name="desc_list_item_icon">Item Icon</string>
    <string name="property9">Property9 Realtors</string>
    <string name="water_pimple">"Water's Edges-Pimple \n Nilkha(Id-3332)</string>
    <string name="sample_string">"some test line 1 \n some test line 2"</string>
    <string name="park_ivory">"park Ivory-wakad (ID-3333)"</string>
    <string name="featurd_propertes">Featurd Propertes</string>
    <string name="newly_added">Newly added Properties</string>
    <string name="we_are_real_people">"We are real people \n
        As consultants we handle all the searching to find you
        a property.We locate a property for you and we manage and
        arrange the purchase or leasing of the property for you.
        We also list your property for rent,
        advertise it and deal with renters. </string>
    <string name="quick_contact_form">Quick Contact Form</string>
    <string name="locationtion">504, Fortuna, Opp. McDonalds, Shivar Chowk, Pimple Saudagar, Pune – 411 027, Maharashtra, India.

Email us at info@property9.in or Call us on +91-8007441199 / +91-9168115599</string>
    <string name="our_location">Our Location</string>

</resources>
